[frontend] fix layout bug in nav

--- a/web/vueapp/src/assets/style/_nav.scss
+++ b/web/vueapp/src/assets/style/_nav.scss
@@ -5,6 +5,9 @@
   }
   .nav-right {
     float: right;
+    display: flex;
+    height: 100%;
+    align-items: center;
   }
 
   .nav-image-wrap {
